(Re-)Connect trino column names to data frame columns

--- a/notebooks/WRI-LEI.ipynb
+++ b/notebooks/WRI-LEI.ipynb
@@ -166,20 +166,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6c50492b-a199-49e6-9128-101696944c75",
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "# this doesn't work with connection from trino api\n",
-    "# but it will work with connection from pyhive.presto, see below\n",
-    "#catDF = pd.read_sql(\"select * from hive.team1.cat\", conn)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
    "id": "023843e7-3f1a-4538-ad67-315cb12a6d93",
    "metadata": {},
    "outputs": [],
@@ -188,7 +174,8 @@
     "\n",
     "cur.execute('select * from osc_datacommons_dev.wri_gppd.plants')\n",
     "df = pd.DataFrame(cur.fetchall())\n",
-    "\n",
+    "cur.execute('show columns from osc_datacommons_dev.wri_gppd.plants')\n",
+    "df.columns = list(pd.DataFrame(cur.fetchall())[0])\n",
     "df.head()"
    ]
   },
@@ -206,7 +193,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "43ed241c-57d1-4998-bd03-2f99c13d64e7",
+   "id": "83ce4e0a-c227-4b34-bff4-a478282ca7dc",
    "metadata": {},
    "outputs": [],
    "source": []
