--- a/notebooks/1_Pre-processing/CORPWATCH pre-processing.ipynb
+++ b/notebooks/1_Pre-processing/CORPWATCH pre-processing.ipynb
@@ -18,12 +18,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "274b420d",
    "metadata": {},
    "outputs": [],
    "source": [
-    "import pandas as pd"
+    "import pandas as pd\n",
+    "import os\n",
+    "\n",
+    "from financial_entity_cleaner.location import CountryCleaner\n",
+    "from financial_entity_cleaner.company import CompanyNameCleaner\n",
+    "from financial_entity_cleaner.id import BankingIdCleaner\n",
+    "pd.set_option('display.max_columns',50)\n",
+    "from dotenv import dotenv_values, load_dotenv"
    ]
   },
   {
@@ -32,6 +39,16 @@
    "metadata": {},
    "source": [
     "## 1. Setup to read CORPWATCH from S3"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "57641719",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "env_var = dotenv_values('../../.env')"
    ]
   },
   {
@@ -56,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "4b26bea8",
    "metadata": {},
    "outputs": [],
@@ -64,11 +81,11 @@
     "import boto3\n",
     "s3_resource = boto3.resource(\n",
     "    service_name=\"s3\",\n",
-    "    endpoint_url=os.environ['S3_LANDING_ENDPOINT'],\n",
-    "    aws_access_key_id=os.environ['S3_LANDING_ACCESS_KEY'],\n",
-    "    aws_secret_access_key=os.environ['S3_LANDING_SECRET_KEY'],\n",
+    "    endpoint_url=env_var['S3_ENDPOINT'],\n",
+    "    aws_access_key_id=env_var['S3_ACCESS_KEY'],\n",
+    "    aws_secret_access_key=env_var['S3_SECRET_KEY'],\n",
     ")\n",
-    "bucket_name = os.environ['S3_LANDING_BUCKET']\n",
+    "bucket_name = env_var['S3_BUCKET']\n",
     "bucket = s3_resource.Bucket(bucket_name)"
    ]
   },
@@ -82,7 +99,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 5,
    "id": "08b64dca",
    "metadata": {},
    "outputs": [],
@@ -94,7 +111,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 6,
    "id": "b005f1b5",
    "metadata": {},
    "outputs": [
@@ -124,7 +141,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 7,
    "id": "d5448d0e",
    "metadata": {},
    "outputs": [],
@@ -136,7 +153,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 8,
    "id": "440bd0f7",
    "metadata": {},
    "outputs": [],
@@ -148,7 +165,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 9,
    "id": "156ebe39",
    "metadata": {},
    "outputs": [
@@ -222,7 +239,7 @@
        "4        3.0  1800.0                                ABBOTT LABORATORIES"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -233,7 +250,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 10,
    "id": "53ea39b8",
    "metadata": {},
    "outputs": [
@@ -251,7 +268,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 11,
    "id": "a2ab8b10",
    "metadata": {},
    "outputs": [],
@@ -263,7 +280,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 12,
    "id": "74508dbf",
    "metadata": {},
    "outputs": [
@@ -303,7 +320,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 13,
    "id": "3781bda8",
    "metadata": {},
    "outputs": [],
@@ -315,7 +332,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 14,
    "id": "0240027a",
    "metadata": {},
    "outputs": [],
@@ -329,7 +346,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 15,
    "id": "0a8d94f6",
    "metadata": {},
    "outputs": [
@@ -403,7 +420,7 @@
        "6    5.0     NEW YORK           US"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -414,7 +431,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 16,
    "id": "14ac3e82",
    "metadata": {},
    "outputs": [],
@@ -425,7 +442,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 17,
    "id": "4f25b333",
    "metadata": {},
    "outputs": [
@@ -444,7 +461,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 18,
    "id": "9b36a0a1",
    "metadata": {},
    "outputs": [
@@ -537,7 +554,7 @@
        "4  ABBOTT PARK           US  "
       ]
      },
-     "execution_count": 31,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -548,7 +565,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 19,
    "id": "4f7401c5",
    "metadata": {},
    "outputs": [],
@@ -560,7 +577,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 20,
    "id": "74133e2f",
    "metadata": {},
    "outputs": [],
@@ -573,7 +590,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 21,
    "id": "9497ec4c",
    "metadata": {},
    "outputs": [
@@ -647,7 +664,7 @@
        "4  2110  Columbia Acorn Trust  549300KHJ8TKYZRHYE36"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -658,7 +675,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 22,
    "id": "82f78219",
    "metadata": {},
    "outputs": [],
@@ -669,7 +686,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 23,
    "id": "e99cbbfb",
    "metadata": {},
    "outputs": [
@@ -774,7 +791,7 @@
        "4  ABBOTT PARK           US  Abbott Laboratories  549300ZYY7524VF6JP88  "
       ]
      },
-     "execution_count": 40,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -785,7 +802,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 24,
    "id": "3e63512d",
    "metadata": {},
    "outputs": [
@@ -812,13 +829,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 26,
    "id": "076eb7a2",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Save locally to \"data\" folder\n",
-    "saved_path = \"..\\..\\data\\pre_processed\"\n",
+    "saved_path = \"../../../dataset/pre_processed/\"\n",
     "filename = \"corpwatch_pre_processed.csv\"\n",
     "corpwatch_filename = os.path.join(saved_path, filename)\n",
     "corpwatch_df.to_csv(corpwatch_filename, header=True, index=False)"
@@ -826,7 +843,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 27,
    "id": "c6bd5d25",
    "metadata": {},
    "outputs": [],
@@ -861,7 +878,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.10"
+   "version": "3.10.6"
   }
  },
  "nbformat": 4,
