--- a/notebooks/2_Cleaning/Cleaning CORPWATCH pre-processed file.ipynb
+++ b/notebooks/2_Cleaning/Cleaning CORPWATCH pre-processed file.ipynb
@@ -24,40 +24,41 @@
    "outputs": [],
    "source": [
     "import pandas as pd\n",
-    "import os"
+    "import os\n",
+    "\n",
+    "from financial_entity_cleaner.location import CountryCleaner\n",
+    "from financial_entity_cleaner.company import CompanyNameCleaner\n",
+    "from financial_entity_cleaner.id import BankingIdCleaner\n",
+    "pd.set_option('display.max_columns',50)\n",
+    "from dotenv import dotenv_values, load_dotenv"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "e9eaf0a3",
+   "id": "9ca4bb66",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Import CountryCleaner\n",
-    "from financial_entity_cleaner.location import CountryCleaner"
+    "env_var = dotenv_values('../../.env')"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "295a1585",
+   "id": "e9eaf0a3",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Import the module for cleaning company's name\n",
-    "from financial_entity_cleaner.company import CompanyNameCleaner"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 14,
-   "id": "1f0e22f5",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Import BankingIdCleaner\n",
-    "from financial_entity_cleaner.id import BankingIdCleaner"
+    "import boto3\n",
+    "s3_resource = boto3.resource(\n",
+    "    service_name=\"s3\",\n",
+    "    endpoint_url=env_var['S3_ENDPOINT'],\n",
+    "    aws_access_key_id=env_var['S3_ACCESS_KEY'],\n",
+    "    aws_secret_access_key=env_var['S3_SECRET_KEY'],\n",
+    ")\n",
+    "bucket_name = env_var['S3_BUCKET']\n",
+    "bucket = s3_resource.Bucket(bucket_name)"
    ]
   },
   {
@@ -75,24 +76,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Save locally to \"data\" folder\n",
-    "saved_path = \"..\\..\\data\\pre_processed\"\n",
-    "filename = \"corpwatch_pre_processed.csv\""
+    "corpwatch = bucket.Object('CorpWatch/pre_processed/corpwatch_pre_processed.csv').get()['Body']\n",
+    "corpwatch_df = pd.read_csv(corpwatch, encoding='utf-8', delimiter=',', low_memory=False)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "id": "cfe58e41",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "corpwatch_df = pd.read_csv(os.path.join(saved_path, filename), low_memory=False)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "id": "b35e3fd4",
    "metadata": {},
    "outputs": [
@@ -197,7 +187,7 @@
        "4  ABBOTT PARK           US  Abbott Laboratories  549300ZYY7524VF6JP88  "
       ]
      },
-     "execution_count": 7,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -216,7 +206,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "id": "2e5448c6",
    "metadata": {},
    "outputs": [],
@@ -227,7 +217,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "id": "1e4366c5",
    "metadata": {},
    "outputs": [],
@@ -239,7 +229,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 8,
    "id": "acc9f59d",
    "metadata": {},
    "outputs": [
@@ -247,7 +237,24 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Cleaning column [country_code]: 100%|██████████████████████████████████████████████████| 719598/719598 [38:47<00:00, 309.23it/s]\n"
+      "Normalizing countries... 44%|█████████████████████▉                            | 315884/719598 [00:56<01:12, 5598.46it/s]\n"
+     ]
+    },
+    {
+     "ename": "KeyboardInterrupt",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[8], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m corpwatch_df \u001b[39m=\u001b[39m country_cleaner_obj\u001b[39m.\u001b[39;49mclean_df(df\u001b[39m=\u001b[39;49mcorpwatch_df, cols\u001b[39m=\u001b[39;49m[\u001b[39m'\u001b[39;49m\u001b[39mcountry_code\u001b[39;49m\u001b[39m'\u001b[39;49m], output_names_as\u001b[39m=\u001b[39;49m \u001b[39m'\u001b[39;49m\u001b[39msuffix\u001b[39;49m\u001b[39m'\u001b[39;49m)\n",
+      "File \u001b[0;32m~/Desktop/OS-C/env/lib/python3.10/site-packages/financial_entity_cleaner/location/country.py:648\u001b[0m, in \u001b[0;36mCountryCleaner.clean_df\u001b[0;34m(self, df, cols, remove_cols, output_names_as)\u001b[0m\n\u001b[1;32m    645\u001b[0m \u001b[39mfor\u001b[39;00m column_name \u001b[39min\u001b[39;00m cols:\n\u001b[1;32m    646\u001b[0m     \u001b[39m# Temporary variable to store the new column name\u001b[39;00m\n\u001b[1;32m    647\u001b[0m     new_col_name \u001b[39m=\u001b[39m \u001b[39m'\u001b[39m\u001b[39m'\u001b[39m\n\u001b[0;32m--> 648\u001b[0m     country_info \u001b[39m=\u001b[39m \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49m__get_clean_df(row[column_name])\n\u001b[1;32m    650\u001b[0m     \u001b[39mfor\u001b[39;00m key \u001b[39min\u001b[39;00m country_info\u001b[39m.\u001b[39mkeys():\n\u001b[1;32m    651\u001b[0m         \u001b[39m# Set the name for the new columns that will hold the cleaning results\u001b[39;00m\n\u001b[1;32m    652\u001b[0m         \u001b[39mif\u001b[39;00m output_names_as \u001b[39m==\u001b[39m \u001b[39m'\u001b[39m\u001b[39msuffix\u001b[39m\u001b[39m'\u001b[39m:\n",
+      "File \u001b[0;32m~/Desktop/OS-C/env/lib/python3.10/site-packages/financial_entity_cleaner/location/country.py:575\u001b[0m, in \u001b[0;36mCountryCleaner.__get_clean_df\u001b[0;34m(self, country)\u001b[0m\n\u001b[1;32m    562\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39m__get_clean_df\u001b[39m(\u001b[39mself\u001b[39m, country: \u001b[39mstr\u001b[39m):\n\u001b[1;32m    563\u001b[0m \u001b[39m    \u001b[39m\u001b[39m\"\"\"\u001b[39;00m\n\u001b[1;32m    564\u001b[0m \u001b[39m    This is an internal method that supports get_clean_df() method as a mean to treat the case in which\u001b[39;00m\n\u001b[1;32m    565\u001b[0m \u001b[39m    get_clean_data() method returns None (country was not found). In this case, a dictionary of NaN objects is\u001b[39;00m\n\u001b[0;32m   (...)\u001b[0m\n\u001b[1;32m    573\u001b[0m \n\u001b[1;32m    574\u001b[0m \u001b[39m    \"\"\"\u001b[39;00m\n\u001b[0;32m--> 575\u001b[0m     dict_country_info \u001b[39m=\u001b[39m \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49mclean(country)\n\u001b[1;32m    577\u001b[0m     \u001b[39m# If the search failed, prepare an empty dictionary to feed the dataframe row\u001b[39;00m\n\u001b[1;32m    578\u001b[0m     \u001b[39mif\u001b[39;00m dict_country_info \u001b[39mis\u001b[39;00m \u001b[39mNone\u001b[39;00m:\n",
+      "File \u001b[0;32m~/Desktop/OS-C/env/lib/python3.10/site-packages/financial_entity_cleaner/location/country.py:525\u001b[0m, in \u001b[0;36mCountryCleaner.clean\u001b[0;34m(self, country)\u001b[0m\n\u001b[1;32m    522\u001b[0m     value \u001b[39m=\u001b[39m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m__OTHER_COUNTRY_NAMES[value]\n\u001b[1;32m    524\u001b[0m \u001b[39m# Search for country information\u001b[39;00m\n\u001b[0;32m--> 525\u001b[0m info_country \u001b[39m=\u001b[39m _search_country\u001b[39m.\u001b[39;49msearch_country_info(value)\n\u001b[1;32m    527\u001b[0m \u001b[39m# Prepare the returning info\u001b[39;00m\n\u001b[1;32m    528\u001b[0m \u001b[39mif\u001b[39;00m pd\u001b[39m.\u001b[39misna(info_country[\u001b[39m'\u001b[39m\u001b[39mcountry_name\u001b[39m\u001b[39m'\u001b[39m]):\n",
+      "File \u001b[0;32m~/Desktop/OS-C/env/lib/python3.10/site-packages/financial_entity_cleaner/location/_search_country.py:171\u001b[0m, in \u001b[0;36msearch_country_info\u001b[0;34m(value)\u001b[0m\n\u001b[1;32m    169\u001b[0m         country_name \u001b[39m=\u001b[39m country_info\n\u001b[1;32m    170\u001b[0m         alpha2_code \u001b[39m=\u001b[39m value\n\u001b[0;32m--> 171\u001b[0m         alpha3_code \u001b[39m=\u001b[39m get_alpha3_from_name(country_name)\n\u001b[1;32m    172\u001b[0m \u001b[39melif\u001b[39;00m \u001b[39mlen\u001b[39m(value) \u001b[39m==\u001b[39m \u001b[39m3\u001b[39m:\n\u001b[1;32m    173\u001b[0m     \u001b[39m# Search by alpha3 code\u001b[39;00m\n\u001b[1;32m    174\u001b[0m     country_info \u001b[39m=\u001b[39m get_name_from_alpha3(value)\n",
+      "File \u001b[0;32m~/Desktop/OS-C/env/lib/python3.10/site-packages/financial_entity_cleaner/location/_search_country.py:62\u001b[0m, in \u001b[0;36mget_alpha3_from_name\u001b[0;34m(country, lookup_dict_from_web)\u001b[0m\n\u001b[1;32m     48\u001b[0m \u001b[39m\u001b[39m\u001b[39m\"\"\"\u001b[39;00m\n\u001b[1;32m     49\u001b[0m \u001b[39mGets the alpha3 code of a country given its name.\u001b[39;00m\n\u001b[1;32m     50\u001b[0m \n\u001b[0;32m   (...)\u001b[0m\n\u001b[1;32m     58\u001b[0m \u001b[39m    No exception is raised.\u001b[39;00m\n\u001b[1;32m     59\u001b[0m \u001b[39m\"\"\"\u001b[39;00m\n\u001b[1;32m     61\u001b[0m \u001b[39m# First, the function looks for an exact match\u001b[39;00m\n\u001b[0;32m---> 62\u001b[0m alpha_code \u001b[39m=\u001b[39m Country\u001b[39m.\u001b[39;49mget_iso3_country_code(country, use_live\u001b[39m=\u001b[39;49mlookup_dict_from_web)\n\u001b[1;32m     64\u001b[0m \u001b[39m# Returns the alpha3 code if the country was found\u001b[39;00m\n\u001b[1;32m     65\u001b[0m \u001b[39mif\u001b[39;00m alpha_code:\n",
+      "File \u001b[0;32m~/Desktop/OS-C/env/lib/python3.10/site-packages/hdx/location/country.py:728\u001b[0m, in \u001b[0;36mCountry.get_iso3_country_code\u001b[0;34m(cls, country, use_live, exception)\u001b[0m\n\u001b[1;32m    711\u001b[0m \u001b[39m@classmethod\u001b[39m\n\u001b[1;32m    712\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39mget_iso3_country_code\u001b[39m(\n\u001b[1;32m    713\u001b[0m     \u001b[39mcls\u001b[39m,\n\u001b[0;32m   (...)\u001b[0m\n\u001b[1;32m    716\u001b[0m     exception: Optional[ExceptionUpperBound] \u001b[39m=\u001b[39m \u001b[39mNone\u001b[39;00m,\n\u001b[1;32m    717\u001b[0m ) \u001b[39m-\u001b[39m\u001b[39m>\u001b[39m Optional[\u001b[39mstr\u001b[39m]:\n\u001b[1;32m    718\u001b[0m \u001b[39m    \u001b[39m\u001b[39m\"\"\"Get ISO3 code for cls. Only exact matches or None are returned.\u001b[39;00m\n\u001b[1;32m    719\u001b[0m \n\u001b[1;32m    720\u001b[0m \u001b[39m    Args:\u001b[39;00m\n\u001b[0;32m   (...)\u001b[0m\n\u001b[1;32m    726\u001b[0m \u001b[39m        Optional[str]: ISO3 country code or None\u001b[39;00m\n\u001b[1;32m    727\u001b[0m \u001b[39m    \"\"\"\u001b[39;00m\n\u001b[0;32m--> 728\u001b[0m     countriesdata \u001b[39m=\u001b[39m \u001b[39mcls\u001b[39;49m\u001b[39m.\u001b[39;49mcountriesdata(use_live\u001b[39m=\u001b[39;49muse_live)\n\u001b[1;32m    729\u001b[0m     countryupper \u001b[39m=\u001b[39m country\u001b[39m.\u001b[39mstrip()\u001b[39m.\u001b[39mupper()\n\u001b[1;32m    730\u001b[0m     \u001b[39mif\u001b[39;00m countryupper\u001b[39m.\u001b[39misupper():\n",
+      "\u001b[0;31mKeyboardInterrupt\u001b[0m: "
      ]
     }
    ],
@@ -617,19 +624,20 @@
     "company_cleaner_obj.letter_case=\"lower\"\n",
     "company_cleaner_obj.remove_accents = True\n",
     "company_cleaner_obj.default_cleaning_rules = ['place_word_the_at_the_beginning',\n",
-    "                                              'remove_words_in_asterisk', \n",
-    "                                              'remove_words_in_parentheses',\n",
-    "                                              'remove_question_marks_in_parentheses', \n",
-    "                                              'replace_hyphen_by_space', \n",
-    "                                              'replace_underscore_by_space', \n",
-    "                                              'remove_text_puctuation_except_dot', \n",
-    "                                              'remove_math_symbols', \n",
-    "                                              'remove_parentheses', \n",
-    "                                              'remove_brackets', \n",
-    "                                              'remove_curly_brackets', \n",
-    "                                              'remove_single_quote_next_character', \n",
-    "                                              'remove_double_quote', \n",
-    "                                              'enforce_single_space_between_words']"
+    "                                                'remove_words_in_asterisk', \n",
+    "                                                'remove_words_in_parentheses',\n",
+    "                                                'remove_question_marks_in_parentheses', \n",
+    "                                                'replace_hyphen_by_space', \n",
+    "                                                'replace_underscore_by_space', \n",
+    "                                                'remove_text_puctuation_except_dot', \n",
+    "                                                'remove_math_symbols', \n",
+    "                                                'remove_parentheses', \n",
+    "                                                'remove_brackets', \n",
+    "                                                'remove_curly_brackets', \n",
+    "                                                'remove_single_quote_next_character', \n",
+    "                                                'remove_double_quote', \n",
+    "                                                'enforce_single_space_between_words']\n",
+    "company_cleaner_obj.post_cleaning_rules = ['remove_all_punctuation']"
    ]
   },
   {
@@ -857,8 +865,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Save locally to \"data\" folder\n",
-    "saved_path = \"..\\..\\data\\cleaned\"\n",
+    "# Save locally to \"dataset\" folder\n",
+    "saved_path = \"../../../dataset/cleaned\"\n",
     "filename = \"corpwatch_cleaned.csv\"\n",
     "corpwatch_filename = os.path.join(saved_path, filename)\n",
     "corpwatch_df.to_csv(corpwatch_filename, header=True, index=False)"
@@ -866,46 +874,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
-   "id": "86f7c2e0",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# From the AWS Account page, copy the export scripts from the appropriate role using the \"Command Line or Programmatic Access\" link\n",
-    "# Paste the copied text into ~/credentials.env\n",
-    "\n",
-    "from dotenv import dotenv_values, load_dotenv\n",
-    "import os\n",
-    "import pathlib\n",
-    "\n",
-    "dotenv_dir = os.environ.get('CREDENTIAL_DOTENV_DIR', os.environ.get('PWD', '/opt/app-root/src'))\n",
-    "dotenv_path = pathlib.Path(dotenv_dir) / 'credentials.env'\n",
-    "if os.path.exists(dotenv_path):\n",
-    "    load_dotenv(dotenv_path=dotenv_path,override=True)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 33,
-   "id": "2c09c777",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import boto3\n",
-    "s3_resource = boto3.resource(\n",
-    "    service_name=\"s3\",\n",
-    "    endpoint_url=os.environ['S3_LANDING_ENDPOINT'],\n",
-    "    aws_access_key_id=os.environ['S3_LANDING_ACCESS_KEY'],\n",
-    "    aws_secret_access_key=os.environ['S3_LANDING_SECRET_KEY'],\n",
-    ")\n",
-    "bucket_name = os.environ['S3_LANDING_BUCKET']\n",
-    "bucket = s3_resource.Bucket(bucket_name)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 34,
-   "id": "5a8df31e",
+   "execution_count": null,
+   "id": "d5f3175b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -939,7 +909,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.10"
+   "version": "3.10.6"
   }
  },
  "nbformat": 4,
