--- a/notebooks/2_Cleaning/Cleaning WRI pre-processed file.ipynb
+++ b/notebooks/2_Cleaning/Cleaning WRI pre-processed file.ipynb
@@ -18,35 +18,47 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "id": "25b3d075",
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
-    "import os"
+    "import os\n",
+    "\n",
+    "from financial_entity_cleaner.location import CountryCleaner\n",
+    "from financial_entity_cleaner.company import CompanyNameCleaner\n",
+    "from financial_entity_cleaner.id import BankingIdCleaner\n",
+    "pd.set_option('display.max_columns',50)\n",
+    "from dotenv import dotenv_values, load_dotenv"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "id": "e9eaf0a3",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Import CountryCleaner\n",
-    "from financial_entity_cleaner.location import CountryCleaner"
+    "env_var = dotenv_values('../../.env')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "id": "295a1585",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Import the module for cleaning company's name\n",
-    "from financial_entity_cleaner.company import CompanyNameCleaner"
+    "import boto3\n",
+    "s3_resource = boto3.resource(\n",
+    "    service_name=\"s3\",\n",
+    "    endpoint_url=env_var['S3_ENDPOINT'],\n",
+    "    aws_access_key_id=env_var['S3_ACCESS_KEY'],\n",
+    "    aws_secret_access_key=env_var['S3_SECRET_KEY'],\n",
+    ")\n",
+    "bucket_name = env_var['S3_BUCKET']\n",
+    "bucket = s3_resource.Bucket(bucket_name)"
    ]
   },
   {
@@ -59,29 +71,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 11,
    "id": "61e37780",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Save locally to \"data\" folder\n",
-    "saved_path = \"..\\..\\data\\pre_processed\"\n",
-    "filename = \"wri_pre_processed.csv\""
+    "wri = bucket.Object('WRI/pre_processed/wri_pre_processed.csv').get()['Body']\n",
+    "wri_df = pd.read_csv(wri, encoding='utf-8', delimiter=',', low_memory=False)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "id": "cfe58e41",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "wri_df = pd.read_csv(os.path.join(saved_path, filename))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 12,
    "id": "b35e3fd4",
    "metadata": {},
    "outputs": [
@@ -149,7 +150,7 @@
        "4                  Sharikat Kahraba Hadjret En-Nouss     DZA"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -168,7 +169,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 13,
    "id": "2e5448c6",
    "metadata": {},
    "outputs": [],
@@ -179,7 +180,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 14,
    "id": "1e4366c5",
    "metadata": {},
    "outputs": [],
@@ -191,7 +192,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 15,
    "id": "acc9f59d",
    "metadata": {},
    "outputs": [
@@ -199,7 +200,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Cleaning column [country]: 100%|██████████████████████████████████████████████████| 10181/10181 [00:33<00:00, 301.67it/s]\n"
+      "Normalizing countries...100%|██████████████████████████████████████████████████| 10181/10181 [00:01<00:00, 5588.54it/s]\n"
      ]
     }
    ],
@@ -209,7 +210,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 16,
    "id": "73b72875",
    "metadata": {},
    "outputs": [],
@@ -219,7 +220,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 17,
    "id": "494437ec",
    "metadata": {},
    "outputs": [
@@ -300,7 +301,7 @@
        "4             dz  "
       ]
      },
-     "execution_count": 11,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -319,7 +320,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 18,
    "id": "2d600639",
    "metadata": {},
    "outputs": [],
@@ -330,7 +331,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 19,
    "id": "99adc98c",
    "metadata": {},
    "outputs": [],
@@ -340,34 +341,43 @@
     "company_cleaner_obj.letter_case=\"lower\"\n",
     "company_cleaner_obj.remove_accents = True\n",
     "company_cleaner_obj.default_cleaning_rules = ['place_word_the_at_the_beginning',\n",
-    "                                              'remove_words_in_asterisk', \n",
-    "                                              'remove_words_in_parentheses',\n",
-    "                                              'remove_question_marks_in_parentheses', \n",
-    "                                              'replace_hyphen_by_space', \n",
-    "                                              'replace_underscore_by_space', \n",
-    "                                              'remove_text_puctuation_except_dot', \n",
-    "                                              'remove_math_symbols', \n",
-    "                                              'remove_parentheses', \n",
-    "                                              'remove_brackets', \n",
-    "                                              'remove_curly_brackets', \n",
-    "                                              'remove_single_quote_next_character', \n",
-    "                                              'remove_double_quote', \n",
-    "                                              'enforce_single_space_between_words']"
+    "                                                'remove_words_in_asterisk', \n",
+    "                                                'remove_words_in_parentheses',\n",
+    "                                                'remove_question_marks_in_parentheses', \n",
+    "                                                'replace_hyphen_by_space', \n",
+    "                                                'replace_underscore_by_space', \n",
+    "                                                'remove_text_puctuation_except_dot', \n",
+    "                                                'remove_math_symbols', \n",
+    "                                                'remove_parentheses', \n",
+    "                                                'remove_brackets', \n",
+    "                                                'remove_curly_brackets', \n",
+    "                                                'remove_single_quote_next_character', \n",
+    "                                                'remove_double_quote', \n",
+    "                                                'enforce_single_space_between_words']\n",
+    "company_cleaner_obj.post_cleaning_rules = ['remove_all_punctuation']"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 20,
    "id": "6aae82f9",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Cleaning company name...100%|██████████████████████████████████████████████████| 92/92 [00:03<00:00, 30.66it/s]\n"
+     ]
+    }
+   ],
    "source": [
     "wri_df = company_cleaner_obj.clean_df(wri_df, 'company_name', 'company_name_clean', 'country_alpha2', 'True')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 21,
    "id": "13b0facf",
    "metadata": {},
    "outputs": [],
@@ -378,7 +388,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 22,
    "id": "698f6ecc",
    "metadata": {},
    "outputs": [
@@ -417,7 +427,7 @@
        "      <td>SociÃ©te AlgÃ©rienne de Production de l\\'Elect...</td>\n",
        "      <td>algeria</td>\n",
        "      <td>dz</td>\n",
-       "      <td>socia(c)te alga(c)rienne de production de l\\ (c)</td>\n",
+       "      <td>socia c te alga c rienne de production de l c</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
@@ -425,7 +435,7 @@
        "      <td>SociÃ©tÃ© AlgÃ©rienne de Production de lâ€™Ele...</td>\n",
        "      <td>algeria</td>\n",
        "      <td>dz</td>\n",
-       "      <td>socia(c)ta(c) alga(c)rienne de production de l...</td>\n",
+       "      <td>socia c ta c alga c rienne de production de la...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
@@ -441,7 +451,7 @@
        "      <td>Sonelgaz Production de lâ€™Electricite</td>\n",
        "      <td>algeria</td>\n",
        "      <td>dz</td>\n",
-       "      <td>sonelgaz production de laEUR(tm)electricite</td>\n",
+       "      <td>sonelgaz production de laEUR tm electricite</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
@@ -471,14 +481,14 @@
        "4            algeria             dz   \n",
        "\n",
        "                                  company_name_clean  \n",
-       "0   socia(c)te alga(c)rienne de production de l\\ (c)  \n",
-       "1  socia(c)ta(c) alga(c)rienne de production de l...  \n",
+       "0      socia c te alga c rienne de production de l c  \n",
+       "1  socia c ta c alga c rienne de production de la...  \n",
        "2                                           sonelgaz  \n",
-       "3        sonelgaz production de laEUR(tm)electricite  \n",
+       "3        sonelgaz production de laEUR tm electricite  \n",
        "4                  sharikat kahraba hadjret en nouss  "
       ]
      },
-     "execution_count": 25,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -489,7 +499,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 23,
    "id": "12199aa4",
    "metadata": {},
    "outputs": [
@@ -515,13 +525,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 24,
    "id": "ee8def7a",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Save locally to \"data\" folder\n",
-    "saved_path = \"..\\..\\data\\cleaned\"\n",
+    "saved_path = \"../../../dataset/cleaned/\"\n",
     "filename = \"wri_cleaned.csv\"\n",
     "wri_filename = os.path.join(saved_path, filename)\n",
     "wri_df.to_csv(wri_filename, header=True, index=False)"
@@ -529,45 +539,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
-   "id": "86f7c2e0",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# From the AWS Account page, copy the export scripts from the appropriate role using the \"Command Line or Programmatic Access\" link\n",
-    "# Paste the copied text into ~/credentials.env\n",
-    "\n",
-    "from dotenv import dotenv_values, load_dotenv\n",
-    "import os\n",
-    "import pathlib\n",
-    "\n",
-    "dotenv_dir = os.environ.get('CREDENTIAL_DOTENV_DIR', os.environ.get('PWD', '/opt/app-root/src'))\n",
-    "dotenv_path = pathlib.Path(dotenv_dir) / 'credentials.env'\n",
-    "if os.path.exists(dotenv_path):\n",
-    "    load_dotenv(dotenv_path=dotenv_path,override=True)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 28,
-   "id": "2c09c777",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import boto3\n",
-    "s3_resource = boto3.resource(\n",
-    "    service_name=\"s3\",\n",
-    "    endpoint_url=os.environ['S3_LANDING_ENDPOINT'],\n",
-    "    aws_access_key_id=os.environ['S3_LANDING_ACCESS_KEY'],\n",
-    "    aws_secret_access_key=os.environ['S3_LANDING_SECRET_KEY'],\n",
-    ")\n",
-    "bucket_name = os.environ['S3_LANDING_BUCKET']\n",
-    "bucket = s3_resource.Bucket(bucket_name)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 25,
    "id": "5a8df31e",
    "metadata": {},
    "outputs": [],
@@ -602,7 +574,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.10"
+   "version": "3.10.6"
   }
  },
  "nbformat": 4,
