--- a/notebooks/3_Matching/Exact Matching - Version 1.0.0.ipynb
+++ b/notebooks/3_Matching/Exact Matching - Version 1.0.0.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 247,
+   "execution_count": 1,
    "id": "c3944c27",
    "metadata": {},
    "outputs": [],
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 248,
+   "execution_count": 2,
    "id": "5d0ec3fc",
    "metadata": {},
    "outputs": [],
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 249,
+   "execution_count": 3,
    "id": "52766289",
    "metadata": {},
    "outputs": [],
@@ -53,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 250,
+   "execution_count": 4,
    "id": "2f22adcd",
    "metadata": {},
    "outputs": [],
@@ -72,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 251,
+   "execution_count": 5,
    "id": "245c4be8",
    "metadata": {},
    "outputs": [],
@@ -84,7 +84,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 252,
+   "execution_count": 6,
    "id": "8ecf1771",
    "metadata": {},
    "outputs": [],
@@ -95,7 +95,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 253,
+   "execution_count": 7,
    "id": "b453c071",
    "metadata": {},
    "outputs": [],
@@ -110,7 +110,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 254,
+   "execution_count": 8,
    "id": "7f21de06",
    "metadata": {},
    "outputs": [
@@ -120,7 +120,7 @@
        "True"
       ]
      },
-     "execution_count": 254,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -140,7 +140,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 255,
+   "execution_count": 9,
    "id": "24b3e89f",
    "metadata": {},
    "outputs": [],
@@ -151,7 +151,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 256,
+   "execution_count": 10,
    "id": "441fc533",
    "metadata": {},
    "outputs": [],
@@ -171,7 +171,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 257,
+   "execution_count": 25,
    "id": "78c2066e",
    "metadata": {},
    "outputs": [],
@@ -183,7 +183,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 258,
+   "execution_count": 26,
    "id": "91f642a4",
    "metadata": {},
    "outputs": [],
@@ -195,7 +195,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 259,
+   "execution_count": 27,
    "id": "4f5c53dd",
    "metadata": {},
    "outputs": [],
@@ -216,7 +216,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 260,
+   "execution_count": 28,
    "id": "48ac487b",
    "metadata": {},
    "outputs": [],
@@ -228,7 +228,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 261,
+   "execution_count": 29,
    "id": "ddb4d326",
    "metadata": {},
    "outputs": [],
@@ -240,7 +240,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 262,
+   "execution_count": 31,
    "id": "664b80c1",
    "metadata": {},
    "outputs": [],
@@ -252,7 +252,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 263,
+   "execution_count": 32,
    "id": "18e8b1f6",
    "metadata": {},
    "outputs": [],
@@ -275,50 +275,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 264,
+   "execution_count": 33,
    "id": "759bfb08",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Import policy module\n",
     "from esg_matching.matcher.policy import MatchingPolicy"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 265,
-   "id": "1980213a",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Create macthing policy object for spott\n",
-    "policy_match_spott = MatchingPolicy(db_spott, 'matching_with_ref')\n",
-    "policy_match_spott.set_matching_source(db_matching)\n",
-    "policy_match_spott.set_no_matching_source(db_no_matching)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 266,
-   "id": "3bd7a1f3",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "policy_match_wri = MatchingPolicy(db_wri, 'matching_with_ref')\n",
-    "policy_match_wri.set_matching_source(db_matching)\n",
-    "policy_match_wri.set_no_matching_source(db_no_matching)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 267,
-   "id": "70f889a3",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "policy_match_rmi = MatchingPolicy(db_rmi, 'matching_with_ref')\n",
-    "policy_match_rmi.set_matching_source(db_matching)\n",
-    "policy_match_rmi.set_no_matching_source(db_no_matching)"
    ]
   },
   {
@@ -331,7 +294,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 268,
+   "execution_count": 34,
    "id": "716e5007",
    "metadata": {},
    "outputs": [],
@@ -348,7 +311,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 269,
+   "execution_count": 35,
    "id": "169af7dc",
    "metadata": {},
    "outputs": [],
@@ -361,149 +324,49 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 270,
-   "id": "24fb9e56",
+   "execution_count": 36,
+   "id": "c6e1a7b1",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Execute policies (direct matching)\n",
-    "\n",
-    "# *************** SPOTT ***************\n",
-    "policy_match_spott.set_referential_source(db_ref)\n",
-    "dfm_matcher_obj.set_policy(policy_match_spott)\n",
-    "dfm_matcher_obj.execute_matching()\n",
-    "\n",
-    "policy_match_spott.set_referential_source(db_wiki)\n",
-    "dfm_matcher_obj.set_policy(policy_match_spott)\n",
-    "dfm_matcher_obj.execute_matching()\n",
-    "\n",
-    "policy_match_spott.set_referential_source(db_corpwatch)\n",
-    "dfm_matcher_obj.set_policy(policy_match_spott)\n",
-    "dfm_matcher_obj.execute_matching()\n",
-    "\n",
-    "# *************** WRI ***************\n",
-    "policy_match_wri.set_referential_source(db_ref)\n",
-    "dfm_matcher_obj.set_policy(policy_match_wri)\n",
-    "dfm_matcher_obj.execute_matching()\n",
-    "\n",
-    "policy_match_wri.set_referential_source(db_wiki)\n",
-    "dfm_matcher_obj.set_policy(policy_match_wri)\n",
-    "dfm_matcher_obj.execute_matching()\n",
-    "\n",
-    "policy_match_wri.set_referential_source(db_corpwatch)\n",
-    "dfm_matcher_obj.set_policy(policy_match_wri)\n",
-    "dfm_matcher_obj.execute_matching()\n",
-    "\n",
-    "# *************** RMI ***************\n",
-    "policy_match_rmi.set_referential_source(db_ref)\n",
-    "dfm_matcher_obj.set_policy(policy_match_rmi)\n",
-    "dfm_matcher_obj.execute_matching()\n",
-    "\n",
-    "policy_match_rmi.set_referential_source(db_wiki)\n",
-    "dfm_matcher_obj.set_policy(policy_match_rmi)\n",
-    "dfm_matcher_obj.execute_matching()\n",
-    "\n",
-    "policy_match_rmi.set_referential_source(db_corpwatch)\n",
-    "dfm_matcher_obj.set_policy(policy_match_rmi)\n",
-    "dfm_matcher_obj.execute_matching()"
+    "target = [db_rmi, db_spott,db_wri]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 271,
-   "id": "49a72a74",
+   "execution_count": 37,
+   "id": "52355e56",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Execute policies (residual matching)\n",
+    "for db in target:\n",
+    "    policy_match = MatchingPolicy(db, 'matching_with_gleif')\n",
+    "    policy_match.set_matching_source(db_matching)\n",
+    "    policy_match.set_no_matching_source(db_no_matching)\n",
     "\n",
-    "# *************** SPOTT ***************\n",
-    "policy_match_spott.set_referential_source(db_ref)\n",
-    "drm_matcher_obj.set_policy(policy_match_spott)\n",
-    "drm_matcher_obj.execute_matching()\n",
+    "    policy_match.set_referential_source(db_ref)\n",
+    "    dfm_matcher_obj.set_policy(policy_match)\n",
+    "    dfm_matcher_obj.execute_matching()\n",
     "\n",
-    "policy_match_spott.set_referential_source(db_wiki)\n",
-    "drm_matcher_obj.set_policy(policy_match_spott)\n",
-    "drm_matcher_obj.execute_matching()\n",
+    "    policy_match = MatchingPolicy(db, 'matching_with_wiki')\n",
+    "    policy_match.set_matching_source(db_matching)\n",
+    "    policy_match.set_no_matching_source(db_no_matching)\n",
     "\n",
-    "policy_match_spott.set_referential_source(db_corpwatch)\n",
-    "drm_matcher_obj.set_policy(policy_match_spott)\n",
-    "drm_matcher_obj.execute_matching()\n",
+    "    policy_match.set_referential_source(db_wiki)\n",
+    "    drm_matcher_obj.set_policy(policy_match)\n",
+    "    drm_matcher_obj.execute_matching()\n",
     "\n",
-    "# *************** WRI ***************\n",
-    "policy_match_wri.set_referential_source(db_ref)\n",
-    "drm_matcher_obj.set_policy(policy_match_wri)\n",
-    "drm_matcher_obj.execute_matching()\n",
+    "    policy_match = MatchingPolicy(db, 'matching_with_corpwatch')\n",
+    "    policy_match.set_matching_source(db_matching)\n",
+    "    policy_match.set_no_matching_source(db_no_matching)\n",
     "\n",
-    "policy_match_wri.set_referential_source(db_wiki)\n",
-    "drm_matcher_obj.set_policy(policy_match_wri)\n",
-    "drm_matcher_obj.execute_matching()\n",
+    "    policy_match.set_referential_source(db_corpwatch)\n",
+    "    drm_matcher_obj.set_policy(policy_match)\n",
+    "    drm_matcher_obj.execute_matching()\n",
     "\n",
-    "policy_match_wri.set_referential_source(db_corpwatch)\n",
-    "drm_matcher_obj.set_policy(policy_match_wri)\n",
-    "drm_matcher_obj.execute_matching()\n",
-    "\n",
-    "# *************** RMI ***************\n",
-    "policy_match_rmi.set_referential_source(db_ref)\n",
-    "drm_matcher_obj.set_policy(policy_match_rmi)\n",
-    "drm_matcher_obj.execute_matching()\n",
-    "\n",
-    "policy_match_rmi.set_referential_source(db_wiki)\n",
-    "drm_matcher_obj.set_policy(policy_match_rmi)\n",
-    "drm_matcher_obj.execute_matching()\n",
-    "\n",
-    "policy_match_rmi.set_referential_source(db_corpwatch)\n",
-    "drm_matcher_obj.set_policy(policy_match_rmi)\n",
-    "drm_matcher_obj.execute_matching()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 272,
-   "id": "8e8214a3",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Execute policies (indirect matching)\n",
-    "\n",
-    "# *************** SPOTT ***************\n",
-    "policy_match_spott.set_referential_source(db_ref)\n",
-    "irm_matcher_obj.set_policy(policy_match_spott)\n",
-    "irm_matcher_obj.execute_matching()\n",
-    "\n",
-    "policy_match_spott.set_referential_source(db_wiki)\n",
-    "irm_matcher_obj.set_policy(policy_match_spott)\n",
-    "irm_matcher_obj.execute_matching()\n",
-    "\n",
-    "policy_match_spott.set_referential_source(db_corpwatch)\n",
-    "irm_matcher_obj.set_policy(policy_match_spott)\n",
-    "irm_matcher_obj.execute_matching()\n",
-    "\n",
-    "# *************** WRI ***************\n",
-    "policy_match_wri.set_referential_source(db_ref)\n",
-    "irm_matcher_obj.set_policy(policy_match_wri)\n",
-    "irm_matcher_obj.execute_matching()\n",
-    "\n",
-    "policy_match_wri.set_referential_source(db_wiki)\n",
-    "irm_matcher_obj.set_policy(policy_match_wri)\n",
-    "irm_matcher_obj.execute_matching()\n",
-    "\n",
-    "policy_match_wri.set_referential_source(db_corpwatch)\n",
-    "irm_matcher_obj.set_policy(policy_match_wri)\n",
-    "irm_matcher_obj.execute_matching()\n",
-    "\n",
-    "# *************** RMI ***************\n",
-    "policy_match_rmi.set_referential_source(db_ref)\n",
-    "irm_matcher_obj.set_policy(policy_match_rmi)\n",
-    "irm_matcher_obj.execute_matching()\n",
-    "\n",
-    "policy_match_rmi.set_referential_source(db_wiki)\n",
-    "irm_matcher_obj.set_policy(policy_match_rmi)\n",
-    "irm_matcher_obj.execute_matching()\n",
-    "\n",
-    "policy_match_rmi.set_referential_source(db_corpwatch)\n",
-    "irm_matcher_obj.set_policy(policy_match_rmi)\n",
-    "irm_matcher_obj.execute_matching()"
+    "    policy_match.set_referential_source(db_corpwatch)\n",
+    "    irm_matcher_obj.set_policy(policy_match)\n",
+    "    irm_matcher_obj.execute_matching()"
    ]
   },
   {
